# LexiAnki

./: .gitignore  README.md  main.py  pyproject.toml  test_processor.py
.github/workflows/: build-windows.yml  python-app.yml
Backend/: main.py  pyproject.toml  requirements.txt  test_processor.py
Backend/src/: anki_generator.py  dictionary_lookup.py  processor.py  scraper.py
docs/adr/: 001-nlp-engine-rust-migration.md
lexianki_nlp/: Cargo.toml  build.rs
lexianki_nlp/src/: lib.rs
lexianki_nlp/tests/: compare_with_python.py
lexianki_rs/: Cargo.toml
lexianki_rs/src/: lib.rs
lexiflash_app/: Cargo.toml
lexiflash_app/examples/: sample_article.txt
lexiflash_app/src/: article_content.rs  db.rs  file_parser.rs  fsrs_scheduler.rs  lib.rs  main.rs  styles.rs  text_utils.rs  url_scraper.rs
lexiflash_app/src/components/: create_deck.rs  dashboard.rs  mod.rs  review_session.rs
lexiflash_nlp/: Cargo.toml
lexiflash_nlp/src/: lib.rs
newstoanki_rs/: Cargo.toml
newstoanki_rs/src/: lib.rs
src/: anki_generator.py  dictionary_lookup.py  file_parser.py  processor.py  scraper.py
