[project]
name = "lexianki"
version = "0.1.0"
description = "Hybrid Python+Rust CLI to extract vocabulary and generate Anki decks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "fake-useragent>=2.2.0",
    "genanki==0.13.0",
    "maturin>=1.13.3",
    "nltk==3.8.1",
    "python-docx>=1.2.0",
    "regex>=2026.4.4",
    "requests==2.31.0",
    "tenacity>=9.1.4",
]
