[package]
name = "lexiflash_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "=0.7.9", features = ["desktop", "launch"] }
dioxus-desktop = "=0.7.9"
lexianki_nlp = { path = "../lexianki_nlp" }
office_oxide = "0.1.2"
pdf_oxide = "0.3.55"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls"] }
scraper = "0.24.0"
