[package]
name = "lexiflash_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
dioxus = { version = "=0.7.9", features = ["desktop", "launch"] }
dioxus-desktop = "=0.7.9"
dirs = "=5.0.1"
fsrs = "=6.6.1"
lexiflash_nlp = { path = "../lexiflash_nlp" }
office_oxide = "0.1.2"
pdf_oxide = "0.3.55"
reqwest = { version = "0.11.27", default-features = false, features = ["brotli", "deflate", "gzip", "rustls-tls"] }
rfd = "0.15.4"
rusqlite = { version = "=0.39.0", features = ["bundled"] }
scraper = "0.24.0"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "time"] }
